platform/6278: Attempting ot fix annotation issues